<resources>
    <string name="app_name">Regnessem</string>
    <string name="regnessem">Regnessem</string>
    <string name="logo">Logo</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login Now</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message...</string>
    <string name="search">Search...</string>
    <string name="your_email">Your email</string>
    <string name="reset">Reset Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
</resources>